Renamed dots to bars and fixed gap after <img>

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -9,21 +9,21 @@ body {
 
 .carousel {
   background-color: #a60000;
-  /* margin: auto; */
-  /* width: 100%; */
 }
 
 /* Hide the images by default */
 .slide {
   display: none;
+  text-align: center;
 }
 
 .slide > img { 
   width: 100vw;
   margin: 0vw;
+  max-width: 800px;
+  vertical-align: bottom;
 }
 
-/* TODO */
 /* Next and prev arrow buttons */
 .prev, .next {
   /* Interactivity */
@@ -31,7 +31,7 @@ body {
   user-select: none;
   /* Position */
   position: absolute;
-  top: 40vw; 
+  top: 40vw; /* TODO Maybe use calc()? */
   /* Size and shape */
   padding: 2vw;
   border-radius: 0 2vw 2vw 0;
@@ -49,28 +49,27 @@ body {
 }
 
 /* On hover add a black tint */
+/* TODO Hover doesn't work on mobile and it might cause issues. */
 .prev:hover, .next:hover {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-/* TODO */
 /* Slide title text */
 .slide_title {
   color: #ffffff;
-  font-family: 'Century Gothic', 'Futura', 'Didact Gothic', san-serif;
-  font-size: 5vw;
+  font-family: 'Century Gothic', 'Futura', 'Didact Gothic', san-serif; /* TODO Font needs to be worked out */
+  font-size: 6vw;
   text-align: center;
-  margin: 1vw;
+  margin: 2vw;
 }
 
-/* TODO */
 /* Slide description text */
 .slide_text {
   color: #ffffff;
-  font-family: 'IM Fell Great Primer', serif;
+  font-family: 'IM Fell Great Primer', serif; /* TODO Font needs to be worked out */
   font-size: 3vw;
   text-align: center;
-  margin: 1vw;
+  margin: 2vw;
 }
 
 /* Horizontal line */
@@ -79,23 +78,19 @@ hr {
   color: #ffffff;
 }
 
-/* The dots */
-.dots {
-  padding-bottom: 10;
-}
-
-.dot {
+/* The bars */
+.bar {
   cursor: pointer;
-  height: 3vw;
-  width: 3vw;
-  margin: 1vw 2vw;
+  height: 1vw;
+  width: 5vw;
+  margin: 2vw 1vw;
   background-color: #cccccc;
-  border-radius: 50%;
   display: inline-block;
+  vertical-align: bottom;
   transition: background-color 0.5s ease;
 }
 
 /* Darker colour when active or on hover */
-.active, .dot:hover {
+.active, .bar:hover {
   background-color: #ffffff;
 }
